ArgoCD/k8s/stateful-todo-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-todo-canary
  namespace: stateful-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful-todo
      version: canary
  template:
    metadata:
      labels:
        app: stateful-todo
        version: canary
    spec:
      serviceAccountName: stateful-todo
      containers:
        - name: stateful-todo
          image: arslanovdi/stateful-todo:v0.0.6
          resources:
            requests:
              memory: "1Mi"
              cpu: "1m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /tasks
              port: 5000
            initialDelaySeconds: 5  # секунд до начала проверки
            periodSeconds: 5        # секунд между проверками
            timeoutSeconds: 3       # секунд ожидания ответа, если превышено то проба неудачная
            successThreshold: 1     # количество последовательных успешных проверок, чтобы подтвердить состояние
            failureThreshold: 3     # количество последовательных неудачных проверок, чтобы считать контейнер мертвым...
            terminationGracePeriodSeconds: 10 # секунд ожидания после получения SIGTERM
          readinessProbe:
            httpGet:
              path: /tasks
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 15
